# hebrewdate

./: CHANGELOG.md  README.md  pyproject.toml  test.py
.github/workflows/: python-package.yml  python-publish.yml
hebrewdate/: __init__.py  hebrewdate.py  hebrewyear.py
