[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hebrewdate"
authors = [
    {name = "Isaac Dovolsky", email = "yidovolsky2@gmail.com"},
]
description = "A Python package for handling Hebrew dates"
readme = "README.md"
changelog = "CHANGELOG.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Isaac-D20/hebrewdate"
"Bug Tracker" = "https://github.com/Isaac-D20/hebrewdate/issues"

[tool.hatch.build.targets.wheel]
packages = ["hebrewdate"]

[tool.hatch.version]
source = "vcs"